# rules_emulation

./: .bazelrc  BUILD.bazel  LICENSE  MODULE.bazel  README.md  WORKSPACE  emulation_deps.bzl  emulation_workspace.bzl
.github/workflows/: blank.yml
distribution/: BUILD.bazel
docs/: BUILD.bazel
emulation/: BUILD.bazel  defs.bzl  passthrough.sh
emulation/internal/: BUILD.bazel  empty_execution_wrapper.sh.tpl  qemu.bzl  qemu_execution_wrapper.sh.tpl  test_passthrough.cc  test_wrapper.bzl
emulation/qemu/: BUILD.bazel  toolchains.bzl
examples/x86_baremetal/: BUILD.bazel  README.md  apm_shutdown2.S
