module(
    name = "rules_emulation",
    version = "0.0.1",
    compatibility_level = 1,
)

bazel_dep(name = "bazel_skylib", version = "1.1.1")

bazel_dep(
    name = "stardoc",
    version = "0.5.0",
    repo_name = "io_bazel_stardoc",
    dev_dependency = True,
)

bazel_dep(
    name = "platforms",
    version = "0.0.4",
)
