load("@io_bazel_stardoc//stardoc:stardoc.bzl", "stardoc")
load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "rules_emulation_bzl",
    srcs = [
        "//emulation:bazel",
    ],
)

stardoc(
    name = "rules_emulation_docs",
    out = "emulation_docs.md",
    input = "//emulation:defs.bzl",
    deps = [":rules_emulation_bzl"],
)
