load("//emulation:defs.bzl", "qemu_execution_wrapper")
load("//emulation/internal:test_wrapper.bzl", "executable_test")

qemu_execution_wrapper(
    name = "x86_64_qemu_system_wrapper",
    graphical = False,
    target_compatible_with = ["@platforms//cpu:x86_64"],
    visibility = ["//visibility:public"],
)

platform(
    name = "x86_64_baremetal",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:none",
    ],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "x86_64_baremetal_setting",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:none",
    ],
    visibility = ["//visibility:public"],
)

genrule(
    name = "apm_shutdown2_obj",
    srcs = [
        "common.h",
        "apm_shutdown2.S",
    ],
    outs = ["apm_shutdown.o"],
    cmd = "/usr/bin/gcc -m32 -c -ggdb3 -o $@ $(location :apm_shutdown2.S)",
)

genrule(
    name = "apm_shutdown2_elf",
    srcs = [
        ":apm_shutdown2_obj",
        "linker.ld",
    ],
    outs = ["apm_shutdown.elf"],
    cmd = """
/usr/bin/ld -melf_i386 -nostdlib -o $@ -T $(location :linker.ld) \
$(location :apm_shutdown2_obj)""",
    executable = True,
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:none",
    ],
)

genrule(
    name = "apm_shutdown2",
    srcs = [
        ":apm_shutdown2_elf",
    ],
    outs = ["apm_shutdown.img"],
    cmd = "/usr/bin/objcopy -O binary $< $@",
    executable = True,
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:none",
    ],
)

executable_test(
    name = "apm_shutdown2_test",
    target = ":apm_shutdown2",
)
